--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag hellokitty
+        docker build . --file ../Dockerfile --tag hellokitty
         docker save hellokitty:latest > hellokitty.tar
         
     - name: saved
