--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ inputs:
   repo-token:
     description: 'secrets.GITHUB_TOKEN'
     required: true
+  allow-skip:
+    description: 'secrets.GITHUB_TOKEN'
+    required: false
+    default: 'false'
 runs:
   using: 'node12'
   main: 'dist/index.js'
