--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
         path: hellokitty.tar
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         content-type: text/plain # Optional: 
-        allow-skip: true
+        allow-skip: false
